[gd_scene format=3 uid="uid://cfcirxr5b62wf"]

[ext_resource type="Script" uid="uid://cmfe60sphe8oc" path="res://Assets/Scripts/FindBox/FindBoxCircleCenterAdd.gd" id="1_2ost2"]
[ext_resource type="PackedScene" uid="uid://cjw7mh2670qkx" path="res://Assets/Scenes/UI/MainUI/FindBox/FindBoxCircleUI.tscn" id="2_tpkqc"]
[ext_resource type="Texture2D" uid="uid://ca83cgwm8w5ku" path="res://Assets/Sprites/UI/Menus/Pause/колесо.png" id="3_tpkqc"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_fl18i"]

[node name="FindBoxCircleCenterAdd" type="Control" unique_id=447238616 node_paths=PackedStringArray("plant_texture", "find_box_circle_ui")]
modulate = Color(1, 1, 1, 0)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2ost2")
plant_texture = NodePath("PlantTexture")
find_box_circle_ui = NodePath("FindBoxCircleUi")

[node name="BackgroundText" type="TextureRect" parent="." unique_id=1628425918]
self_modulate = Color(0, 0, 0, 0.490196)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("PlaceholderTexture2D_fl18i")

[node name="FindBoxCircleUi" parent="." unique_id=471362580 instance=ExtResource("2_tpkqc")]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85
offset_right = 0.0
offset_bottom = 0.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("3_tpkqc")

[node name="BrainUi" parent="FindBoxCircleUi" index="0" unique_id=725392408]
process_mode = 3
offset_left = 58.2
offset_top = 230.8
offset_right = 58.2
offset_bottom = 230.8

[node name="NoseUi" parent="FindBoxCircleUi" index="1" unique_id=1874491174]
process_mode = 3
offset_left = 60.2
offset_top = 41.8
offset_right = 60.2
offset_bottom = 41.8

[node name="PlantTexture" type="TextureRect" parent="." unique_id=2010267998]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_top = 0.1
anchor_right = 0.9
anchor_bottom = 0.9
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
expand_mode = 3
stretch_mode = 5

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="item_picked" from="FindBoxCircleUi/BrainUi" to="." method="_on_item_picked"]
[connection signal="item_picked" from="FindBoxCircleUi/NoseUi" to="." method="_on_item_picked"]

[editable path="FindBoxCircleUi"]
